--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <body>
         <div class="square">
         <nobr>
-            <img src="C:\Users\1552784\Desktop\DIG\dig-foundations\foundations\最終課題2\noren1_red.png" id="noren">
-            <img src="C:\Users\1552784\Desktop\DIG\dig-foundations\foundations\最終課題2\noren1_red.png" id="noren">
+            <img src="noren1_red.png" id="noren">
+            <img src="noren1_red.png" id="noren">
         </nobr>
         <h1>おでんガチャ🍢</h1>
         <p>ジョークアプリですが乱数とselect、input要素をカスタマイズなど、学んだことを多く活かす発想から作りました…真面目ですよ😈😈</p>
         <p>※おでんのレアリティはTomokiの独断と偏見です、異論は受け付けます🍢&emsp;※ちなみに味噌ではなくからしやしょうが醬油派です。</p>
-        <img src="C:\Users\1552784\Desktop\DIG\dig-foundations\foundations\最終課題2\oden.png" id="oden">
+        <img src="oden.png" id="oden">
         <div>
             <h3>Pick UP👆&emsp;当選確立…他のSSRの2倍!</h3>
             <select name="ingredients" id="pickup">
