--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
         <h2>よし、何連やってく??&emsp;&emsp;ガチャやり過ぎ注意！</h3>
         <input type="number" min="0" max="10" oninput="javascript: this.value = this.value.slice(0, 2);" id="times">
         <input type="button" value="Let's Gacha!!" id="gacha">
-        <p>Totalガチャ回数：</p>
+        <br>
+        <span>Totalガチャ回数：</span>
+        <span id="total">0回</span>
+        <br>
+        <span>貴方の残金：</span>
+        <span id="money">90000ペリカ</span>
         <br>
         <h3>Result</h3>
         <div id="result">
